--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
         "v-lazy-image": "^2.1.1",
         "vue": "^2.6.11",
         "vue-router": "^3.5.3",
-        "webpack-chain": "^6.5.1"
+        "webpack-chain": "^6.5.1",
+        "worker-loader": "^3.0.8"
     },
     "devDependencies": {
         "@babel/core": "^7.21.4",
